@@ -55,7 +55,7 @@ typedef enum {
 
 
 
-#define GTK_SAT_SELECTOR_DEFAULT_FLAGS (GTK_SAT_SELECTOR_FLAG_NAME)
+#define GTK_SAT_SELECTOR_DEFAULT_FLAGS (GTK_SAT_SELECTOR_FLAG_NAME | GTK_SAT_SELECTOR_COL_CATNUM)
 
 
 #define GTK_TYPE_SAT_SELECTOR  (gtk_sat_selector_get_type ())
